# Default tool config file. See also setup.cfg for tools that don't yet
# support pyproject.toml.

[project]
name = "Funnel"
version = "26.1"
description = "Hasgeek website application"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "argon2-cffi",
  "babel",
  "base58",
  "baseframe",
  "bcrypt<5.0.0",              # https://github.com/notypecheck/passlib/pull/23
  "better-profanity!=0.7.0",
  "blinker",
  "brotli",
  "cachelib",
  "chevron",
  "click",
  "coaster",
  "cryptography",
  "dataclasses-json",
  "flask",
  "flask-babel",
  "flask-executor",
  "flask-flatpages",
  "flask-mailman",
  "flask-migrate",
  "flask-moreshell",
  "flask-redis",
  "flask-rq",
  "flask-sqlalchemy",
  "flask-wtf",
  "furl",
  "geoip2",
  "grapheme",
  "greenlet",
  "gunicorn",
  "html2text",
  "httpx[http2]",
  "icalendar",
  "idna",
  "ijson",
  "itsdangerous",
  "jinja2",
  "lazy-loader",
  "linkify-it-py",
  "markdown-it-py",
  "mdit-py-plugins",
  "mxsniff",
  "oauth2client",
  "passlib-fork>=1.7.4.post2",
  "phonenumbers",
  "premailer",
  "progressbar2",
  "psycopg[binary]",
  "pycountry",
  "pyisemail",
  "python-dateutil",
  "python-dotenv",
  "python-telegram-bot>=20.7",
  "pytz",
  "pyvimeo",
  "qrcode",
  "requests",
  "rich",
  "rq",
  "rq-dashboard",
  "sqlalchemy-json",
  "sqlalchemy-utils",
  "sqlalchemy[asyncio]",
  "tweepy",
  "twilio",
  "typing-extensions",
  "tzdata",
  "user-agents",
  "werkzeug",
  "whitenoise",
  "z-base-32",
  "zxcvbn",
]

[tool.uv.workspace]
members = ["build/dependencies/baseframe", "build/dependencies/coaster"]

[tool.uv.sources]
baseframe = { workspace = true }
coaster = { workspace = true }

[dependency-groups]
test = [
  "beautifulsoup4",
  "coverage",
  "coveralls",
  "lxml",
  "playwright",
  "pytest",
  "pytest-asyncio",
  "pytest-bdd>=7.3.0",
  "pytest-cov",
  "pytest-dotenv",
  "pytest-env",
  "pytest-playwright",
  "pytest-pretty",
  "pytest-rerunfailures",
  "pytest-socket",
  "requests-mock",
  "respx",
  "sttable",
  "tomlkit",
  "typeguard",
]
test-github = [
  { include-group = "test" },
  "pytest-github-actions-annotate-failures",
]
dev = [
  { include-group = "test" },
  "flask-debugtoolbar",
  "mkinit",
  "mypy",
  "mypy-json-report",
  "po2json",
  "pre-commit",
  "ptpython",
  "pylint",
  "pytest-icdiff",
  "pyupgrade",
  "ruff",
  "twilio-stubs",
  "types-beautifulsoup4",
  "types-chevron",
  "types-flask-migrate",
  "types-geoip2",
  "types-greenlet",
  "types-lxml",
  "types-mock",
  "types-passlib",
  "types-pillow",
  "types-pytest-lazy-fixture",
  "types-python-dateutil",
  "types-pytz",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-zxcvbn",
]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | buck-out
  | build
  | dist
  | node_modules
  | funnel/assets
)/
'''

[tool.creosote]
venvs = [".venv"]
paths = ["funnel", "tests", "migrations/versions"]
deps-file = "pyproject.toml"
sections = ["project.dependencies"]
exclude-deps = [
  "argon2-cffi",     # Optional dep for passlib
  "bcrypt",          # Optional dep for passlib
  "flask-moreshell", # Auto-imported by Flask
  "greenlet",        # Optional dep for SQLAlchemy's asyncio support
  "gunicorn",        # Not imported, used as server
  "linkify-it-py",   # Optional dep for markdown-it-py
  "psycopg",         # Optional dep for SQLAlchemy
  "rq-dashboard",    # Creosote fails to recognise the import
  "tzdata",          # Resource-only dep, no code to import
]

[tool.djlint]
profile = 'jinja'
extension = '.html.jinja2'
indent = 2
ignore = "T002,T028,H006,H016,H020,H023,H030,H031"

[tool.curlylint]
# Curlylint is not used, but the configuration is preserved here for future use
include = '\.html.jinja2$'
template_tags = [['set'], ['trans', 'pluralize', 'endtrans']]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | buck-out
  | build
  | dist
  | node_modules
  | funnel/assets
)/
'''

[tool.curlylint.rules]
# All role attributes must be valid.
# See https://www.curlylint.org/docs/rules/aria_role
aria_role = true
# HTML lang attribute must be set
# See https://www.curlylint.org/docs/rules/html_has_lang
html_has_lang = true
# The `alt` attribute must be present.
# See https://www.curlylint.org/docs/rules/image_alt
image_alt = true
# Indent 2 spaces
# See https://www.curlylint.org/docs/rules/indent
# Enable after issue 6 is fixed: https://github.com/thibaudcolas/curlylint/issues/6
# indent = 2
# Avoid positive `tabindex` values
tabindex_no_positive = true

[tool.isort]
# Some isort functionality is replicated in ruff, which should have matching config
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
line_length = 88
order_by_type = true
use_parentheses = true
combine_as_imports = true
split_on_trailing_comma = false
known_repo = ['funnel']
known_first_party = ['baseframe', 'coaster', 'flask_lastuser']
default_section = 'THIRDPARTY'
sections = [
  'FUTURE',
  'STDLIB',
  'THIRDPARTY',
  'FIRSTPARTY',
  'REPO',
  'LOCALFOLDER',
]

[tool.pytest.ini_options]
minversion = "6.1" # For config.rootpath
required_plugins = [
  'pytest-asyncio',
  'pytest-bdd',
  'pytest-cov',
  'pytest-dotenv',
  'pytest-env',
  'pytest-rerunfailures',
  'pytest-socket',
  'requests-mock',
]
addopts = [
  '--cov-report=term-missing',
  '--disable-socket',
  '--allow-unix-socket',         # Required for Playwright tests
  '--allow-hosts=127.0.0.1,::1', # Add Docker IPs here
  '--strict-markers',
]
asyncio_mode = 'auto'
markers = [
  'dbcommit: Test requires true database commits',
  'formdata(dict): HTTP form data for form fixture',
  'formuser("user"): User fixture for editing a form',
  'update_markdown_data: Regenerate markdown test output (dev use only)',
  'debug_markdown_output: Generate markdown debug file tests/data/markdown/output.html (dev use only)',
  'requires_config("app", "feature"): Run test only if app config is available',
  'mock_config("app", config_dict): Create mock configuration for a feature',
]
bdd_features_base_dir = 'tests/features/'
env = [
  'FLASK_ENV=testing',
  'FLASK_TESTING=true',
  'FLASK_DEBUG_TB_ENABLED=false',
]
env_override_existing_values = false
env_files = ['.env.testing', '.testenv', '.env', '.flaskenv']
filterwarnings = ['ignore:.*:DeprecationWarning']

[tool.pyright]
venv = '.venv'
reportMissingImports = true
reportMissingTypeStubs = false
reportShadowedImports = false
pythonVersion = '3.11'

[tool.mypy]
files = '**/*.py'
exclude = ['node_modules', 'build']
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'tests.*'
check_untyped_defs = true
warn_unreachable = false

[tool.pylint.master]
max-parents = 10
init-hook = """
import os, astroid.bases, pathlib
# Tell Pylint where to find packages from within tests
for path in pathlib.Path.cwd().parents:
    if (path / 'pyproject.toml').is_file():
      sys.path.append(str(path))
# Tell Pylint hybrid_property and cached_property are property-types
astroid.bases.POSSIBLE_PROPERTIES.add('hybrid_property')
astroid.bases.POSSIBLE_PROPERTIES.add('cached_property')
"""

[tool.pylint.message_control]
max-line-length = 88
disable = [
  'abstract-method',                # Defer to static type checkers
  'attribute-defined-outside-init', # Defer to static type checkers
  'comparison-with-callable',       # Pylint is confused by SQLAlchemy attributes
  'cyclic-import',                  # We have tail imports all over
  'duplicate-code',                 # Too many false positives
  'function-redefined',             # Let Ruff handle this
  'fixme',                          # Our workflow is to tag for future fixes
  'invalid-name',                   # Ruff covers our naming convention requirements
  'line-too-long',                  # Long lines are okay if Black doesn't wrap them
  'no-member',                      # Pylint gets confused over how some members become part of an instance
  'no-value-for-parameter',         # False positives with SQLAlchemy's hybrid_method
  'too-few-public-methods',         # Data classes and validator classes have few methods
  'too-many-ancestors',             # Our models have a large number of mixin classes
  'too-many-arguments',             # Callables can have many optional arguments
  'too-many-instance-attributes',   # Some instances are just bags of attributes
  'too-many-lines',                 # We have large files that include all related functionality
  'too-many-public-methods',        # Models and views have many public methods
  'unused-argument',                # Arguments required for spec compatibility aren't always used
  'wrong-import-order',             # Let isort and ruff handle this
  'wrong-import-position',          # Let black, isort and ruff handle this

  # False positives caused by lazy_loader in funnel.models, so we depend on Mypy instead
  'isinstance-second-argument-not-valid-type',
  'no-name-in-module',
  'not-callable',
  'unsubscriptable-object',

  # Temporarily disabled pending audit and fixes
  'missing-class-docstring',
  'missing-function-docstring',
  'too-many-branches',
  'too-many-locals',
  'too-many-nested-blocks',
  'too-many-positional-arguments',
  'too-many-return-statements',
  'too-many-statements',
]

[tool.bandit]
exclude_dirs = ['node_modules']
skips = [
  'B113', # Handled by pylint; bandit incorrectly flags requests_mock for timeout
  'B608', # Raw SQL detector is noisy for migrations and not configurable
]

[tool.bandit.assert_used]
skips = ['**/*_test.py', '**/test_*.py', '**/conftest.py']

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Target Python 3.11
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "ANN",    # flake8-annotations
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "ASYNC1", # flake8-trio
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C",      # pylint convention
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "I",      # isort
  "INP",    # flake8-no-pep420
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "N",      # pep8-naming
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RUF",    # ruff
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T20",    # flake8-print
  "UP",     # pyupgrade
  "W",      # Warnings
  "YTT",    # flake8-2020
]
ignore = [
  "A005",    # Shadowing a Python standard-library module is okay as they're namespaced
  "ANN002",  # `*args` is implicit `Any`
  "ANN003",  # `**kwargs` is implicit `Any`
  "ANN401",  # Allow `Any` type
  "C901",
  "D101",
  "D102",
  "D103",
  "D105",    # Magic methods don't need docstrings
  "D106",    # Nested classes don't need docstrings
  "D107",    # `__init__` doesn't need a docstring
  "D203",    # No blank lines before class docstring
  "D212",    # Allow multiline docstring to start on next line after quotes
  "D213",    # But also allow multiline docstring to start right after quotes
  "E402",    # Allow top-level imports after statements
  "E501",    # Allow long lines if the formatter can't fix it
  "EM101",   # Allow Exception("string")
  "EM102",   # Allow Exception(f"string")
  "ISC001",  # Allow implicitly concatenated string literals (required for formatter)
  "PLR2004", # Too many false positives
  "PLR0911", # Alow multiple return statements
  "PLR0912", # Some functions are complex
  "PLR0913", # Some functions need many args
  "PLR0915", # Too many statements are okay
  "RUF012",  # Allow mutable ClassVar without annotation (conflicts with SQLAlchemy)
  "SLOT000", # Don't require `__slots__` for subclasses of str
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow these characters in strings
allowed-confusables = ["‘", "’", "–"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402"] # Allow non-top-level imports
"tests/**.py" = [
  "ARG001", # Context manager fixtures may not be used within a test
  "ANN001", # Args don't need types (usually fixtures)
  "D401",   # Fixture docstrings shouldn't be imperative
  "N802",   # Fixture returning a class may be named per class name convention
  "N803",   # Args don't require naming convention (fixture could be a class)
  "N999",   # Module name may have a CamelCased class name in it
  "S101",   # Allow assert
]
"tests/**/__init__.py" = ["D104"] # Allow empty marker `__init__.py` files
"migrations/**.py" = [
  "INP001", # This folder is not a package
]

[tool.ruff.lint.isort]
# These config options should match isort config above under [tool.isort]
combine-as-imports = true
split-on-trailing-comma = false
relative-imports-order = 'furthest-to-closest'
known-first-party = ['baseframe', 'coaster', 'flask_lastuser']
section-order = [
  'future',
  'standard-library',
  'third-party',
  'first-party',
  'repo',
  'local-folder',
]

[tool.ruff.lint.isort.sections]
repo = ['funnel']

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-bandit]
allowed-markup-calls = ['baseframe._']
